# inventorization_system

./: .travis.yml  db.sqlite3  manage.py  pyproject.toml  setup.cfg
analytics_service/: admin.py  models.py  serializers.py  views.py
analytics_service/migrations/: 0001_initial.py
auth_service/: models.py  serializers.py  tests.py  views.py
core/: __init__.py  analytics.py  asynchronous_messenger.py  create_functions.py  email_sender.py  logger.py  permissions.py
inventorization_service/: admin.py  apps.py  models.py  serializers.py  views.py
inventorization_service/migrations/: 0001_initial.py  0002_delete_user.py  0003_initial.py  0004_alter_item_owner.py  0005_alter_item_owner.py  0006_alter_item_fix_status.py  0007_item_type.py  0008_alter_item_fix_status.py
inventorization_service/static/inventorization_service/: main.css
inventorization_system/: asgi.py  settings.py  urls.py  wsgi.py
logs/: error.json  info.json
logs/info/: 2022_6_10.json  2022_6_5.json  2022_6_6.json
rabbitmq_practice/: new_task.py  receiving.py  sending.py
rabbitmq_practice/hello_world/: receiver.py  sender.py
rabbitmq_practice/rpc/: rpc_client.py  rpc_server.py
rabbitmq_practice/work_queues/: new_task.py  worker.py
rms_service/: apps.py  serializers.py  views.py
templates/: base.html  main.html
tests/: test_analytics_service.py  test_auth_service.py  test_inventorization_service.py  test_log_server.py  test_logger.py  test_rms.py  test_rms_service.py
tests/test_logs/: error.json  info.json
